# affine.earth.public

./: .gitignore  ARC_LOCAL_100_SUBMIT_READY.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
developer-suite/: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
developer-suite/affine_earth_sdk/: __init__.py  client.py  game_seeds.py  language_games.py  mcp.py  openai_v1.py  openusd.py  seals.py  umc.py
developer-suite/docs/: AFFINE_EARTH_GOALS_COMPLIANCE.md  ATC_INGEST_PROJECT.md  DOMAINS.md  LANGUAGE_GAMES_TEACHING.md  MCP.md  NO_BINARIES.md  OPENAI_V1.md  OPENUSD_AND_AFFINE_EARTH.md  OPENUSD_AND_REALITYPRO.md
developer-suite/docs/receipts/: LANGUAGE_GAMES_TEACHING_RUN.json  atc_sdk_validation_20260724.json  wiki_openai_membrane_20260724.json
developer-suite/docs/receipts/atc_airport_video_20260724/: NARRATION.md  capture_atc_video.py  capture_fr24_map.py  capture_manifold_bands.py  capture_meta.json  capture_meta_nav.json  capture_openusd_nav.py  capture_wx_warnings.py
developer-suite/docs/receipts/atc_openusd_20260724/: NARRATION.md  airspace-lattice.usda  cdp_live_state.json  context.json  example_14_run.txt  games.json  healthz.json  ingest_rich.json  ingest_teach.json  observer_demo.json  project_rich.json  project_teach.json  sdk_probe.txt  usda_live_markers.txt
developer-suite/docs/receipts/realitypro_live_3d_20260724/: NARRATION.md  airspace-lattice.usda  cdp_live_state.json  html_title.txt  sdk_03_chat.txt  usda_live_markers.txt
developer-suite/examples/: 00_healthz.py  01_mcp_tools_list.py  02_mcp_execute_transition.py  03_openai_models_and_chat.py  04_openai_responses.py  05_exam_hle_smoke.py  06_inject_and_scf.py  07_game_turn_and_projection.py  08_umc_coding_llvm_narrative.py  09_umc_cinema_aviation_gaming.py  10_openusd_airspace_fetch.py  11_game_ingest_project_domains.py  12_domain_tour.py  13_all_language_games_teaching.py  14_atc_ingest_project_openusd.py  _common.py
developer-suite/examples/games/: _runner.py  aviation.py  aviation_atc.py  cinema.py  coding.py  formal_manifold.py  gaming.py  linguistic_membrane.py  reality.py  run_all.py  topological_sandbox.py  torsion_dialogue.py  umc_gav.py  wallet_qfot.py
developer-suite/fixtures/coding/: sample_snippet.c
developer-suite/fixtures/coding/affine_add_app/: README.md  addlib.c  app_manifest.json  main.py
developer-suite/fixtures/openusd/: airspace-atc-world.usda  airspace-lattice-live.usda
developer-suite/fixtures/scenes/: README.md
developer-suite/openusd-player/: index.html  manifold-stage.js  player.js  solar-weather.js  styles.css  teaching-seeds.js  traffic-warnings.js  uum8d-shell.js
developer-suite/openusd-player/assets/skins/: map-airport.css  map-dark.css  map-hemisphere.css  map-metro.css  map-regional.css  (+1 more)
developer-suite/realitypro-player/: README.md  index.html  player.js  styles.css  teaching-seeds.js  uum8d-shell.js
developer-suite/scripts/: check_no_binaries.py
developer-suite/tests/: test_live_smoke.py  test_sdk_unit.py  test_traffic_warnings_separation.py
(+1219 files in other folders)
