[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-llvm-benchmark-suite"
version = "0.1.0"
description = "A unified, real-world domain benchmark testing suite for AI LLMs and LLVM compiler infrastructures."
readme = "README.md"
authors = [{ name = "GaiaFTCL Engineering", email = "richard@affine.earth" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
llm-llvm-bench = "llm_llvm_bench.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
