[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "affine-earth-developer-suite"
version = "0.1.0"
description = "Binary-free Python SDK and examples for Affine.Earth MCP, OpenAI /v1, language games, OpenUSD"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Affine.Earth / GaiaFTCL" }]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["affine_earth_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: hits https://affine.earth (set AFFINE_LIVE=1)",
]
